tdf#163000 don't add any fonts in the system "reserved fonts" folder

macOS Sequoia added a new PingFangUI.ttc font file which
contains all of the PingFang font families. However, any
fonts loaded from this font file result in the following
failures:

- Skia renders font with wrong glyphs
- Export to PDF contain a damaged embedded font

macOS Sequoia still has separate, downloadable Type 3
bitmap fonts for the PingFang font family so ignore
any fonts in the PingFangUI.ttc font file and, just to
be safe, ignore any other font files in the system
"reserved fonts" folder that may be added in the future.

Change-Id: I8a025c8b6d84a661b173aa7d6d5b261c92452b34
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174160
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins